[package]
name = "super_mega_chatroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
crossterm = "0.25.0"
tokio = { version = "1", features = ["full"] }
tui = "0.19.0"
